<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/bank_24"
        android:contentDescription="@string/a" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_banco"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/header_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto_gmail_com"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="8dp" />

</LinearLayout>
