<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/iniciar_sesion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        app:helperText="Obligatorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_tu_dni" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvErrorDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/dni"
        app:layout_constraintTop_toBottomOf="@+id/dni"
        app:layout_constraintEnd_toEndOf="@+id/dni" />

    <!-- Campo Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:helperText="Obligatorio"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorDni">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_tu_contrasena"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Mensaje de error para Contraseña -->
    <TextView
        android:id="@+id/tvErrorPassw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/passw"
        app:layout_constraintTop_toBottomOf="@+id/passw"
        app:layout_constraintEnd_toEndOf="@+id/passw" />

    <!-- Línea guía para centrar los botones -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!-- Botón Entrar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btEntrar"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="96dp"
        android:text="@string/entrar"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorPassw"
        app:layout_constraintWidth_percent="0.4" />

    <!-- Botón Salir -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSalir"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="96dp"
        android:text="@string/salir"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorPassw"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
