<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovementsActivity">

    <TextView
        android:id="@+id/Movimientos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/movimientoss"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/seleccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Movimientos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/selecciona_una_cuenta"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        />

    <Spinner
        android:id="@+id/spCuentas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seleccion"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ultimosMovimientos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spCuentas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ultimos_movimientos"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reciclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ultimosMovimientos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp"
        />





</androidx.constraintlayout.widget.ConstraintLayout>